# tauri-vue

./: .eslintrc.js  README.md  package.json
src/: App.vue  Appb.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/scss/: app.scss  settings.scss
src/router/: index.ts
src/scripts/: app.ts  settings.ts
src/scripts/common/: index.ts
src/store/: index.ts
src/views/: MainWindow.vue  Settings.vue
