[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# tauri = { version = "1.0.0-beta.8", features = [ "api-all" ] }
tauri = { git = "git://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
tauri-plugin-shadows = { git = "git://github.com/tauri-apps/tauri-plugin-shadows", features = ["tauri-impl"] } # or "tao-impl" for TAO projects.

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
